--- a/01_04_projets.html
+++ b/01_04_projets.html
@@ -114,24 +114,20 @@
 		<div class="sidebar">
 			<table class="table_logos">
     <tr>
-        <td colspan="1">
-            <a target="_blank" href="https://letg.cnrs.fr/" >
-            	<img class="logo" src="illustrations/logo_letg.png" alt="logo LETG" height="75">
+        <td colspan="1" style="width: 50%;">
+            <a target="_blank" href="https://www.madatlas.mg/" >
+            	<img class="logo" src="illustrations/logo_Madatlas.png" alt="logo Madatlas" height="75">
             </a>
         </td>
-        <td colspan="1">
-            <a target="_blank" href="http://www.passages.cnrs.fr/" >
-            	<img class="logo" src="illustrations/logo_passages.png" alt="logo passages" height="33">
+        <td colspan="1" style="width: 50%;">
+            <a target="_blank" href="https://www.univ-fianar.mg/" >
+            	<img class="logo" src="illustrations/logo_UF.png" alt="logo Université Fianarantsao" height="70">
             </a>
         </td>
-        <td colspan="1">
-            <a target="_blank" href="http://ouvrir.passages.cnrs.fr/" >
-            	<img class="logo" src="illustrations/logo_ouvrir.png" alt="logo ouvrir" height="30">
-            </a>
-        </td>
+        
     </tr>
     <tr>
-        <td colspan="3">
+        <td colspan="2" style="width: 100%;">
             <a target="_blank" href="https://qgis.org/fr/site/" >
             	<img class="logo" src="illustrations/logo_qgis_3_22.png" alt="logo QGIS 3.22" height="70">
             </a>
