--- a/01_01_SIG.html
+++ b/01_01_SIG.html
@@ -110,10 +110,10 @@
 					
 						<p>On distingue généralement deux types de données : <b>vecteur et raster</b>.</p>
 						<figure>
-							<a href="illustrations/1_1_vecteur.jpg" >
-							<img src="illustrations/1_1_vecteur.jpg" alt="Exemple de données vecteur" width="600">
+							<a href="illustrations/1_1_vecteur.png" >
+							<img src="illustrations/1_1_vecteur.png" alt="Exemple de données vecteur" width="600">
 							</a>
-							<figcaption >Exemple de données vecteur, l'exemple du Sénégal : régions sous forme de polygones, rivières sous forme de lignes et villes sous forme de points (source : Agence Nationale de l'Aménagement du Territoire (ANAT) du Sénégal).</figcaption>
+							<figcaption >Exemple de données vecteur, les districts de Madagascar (source : Madagascar BNGRC (National Disaster Management Agency))).</figcaption>
 						</figure>
 						<p>Les <b>données vecteurs</b> se définissent uniquement par des coordonnées. On trouvera des données vecteurs de type <b>point</b>, <b>ligne</b> et <b>polygone</b>. Un point sera défini par un couple de coordonnées XY, une ligne ou un polygone par les coordonnées de leurs sommets. Une couche vecteur sera soit de type point, soit de type ligne, soit de type polygone, mais ne pourra contenir de données de deux types différents (sauf dans le cas particuliers de certains formats qui ne seront pas abordés dans ce tutoriel).</p>
 						<p>On pourra choisir par exemple de représenter des cours d'eau sous forme de ligne, des villes sous forme de points...</p>
